feat: implementar historial de subastas ganadas en el dashboard
Backend (servicio-subastas):
- Fix: Corrección de lógica de negocio en FindWonAuctionsUseCase para considerar ganadas solo las subastas en estado FINISHED.
- Refactor: Actualización de JpaAuctionRepository y AuctionRepository para filtrar por winnerId y status.

Frontend (React):
- Service: Agregado el método getWonAuctions en auction.service.ts.
- WalletPage: Integración de llamadas asíncronas en paralelo (Promise.all) para cargar saldo, pujas activas y subastas ganadas.
- UI: Nueva sección '🏆 Mis Subastas Ganadas' con tabla interactiva y enlaces directos al detalle del producto.